Hide fixed header not on mobile menu

--- a/src/sass/_desktop.scss
+++ b/src/sass/_desktop.scss
@@ -4,7 +4,7 @@
     display: none !important;
 }
 
-.mobile-menu:not(.open) {
+.fixed-header-wrapper {
     .fixed-header {
         &.hiddenDesktop {
             opacity: 0;
